# mc_dialign

./: .gitignore  MC_DIALIGN  README.md
src/: CMakeLists.txt  Makefile  alignment.cpp  alignment.h  alignment_graph.cpp  alignment_graph.h  dialign.cpp  dialign.h  fasta_reader.cpp  fasta_reader.h  fasta_writer.cpp  fasta_writer.h  fragment.cpp  fragment.h  incidence_graph.cpp  incidence_graph.h  main.cpp  mc_dialign.cpp  mc_dialign.h  pairwise_alignment_matrix.cpp  pairwise_alignment_matrix.h  reader.cpp  reader.h  site.cpp  site.h  sitespace.cpp  sitespace.h  succession_graph.cpp  succession_graph.h  succession_vertex.cpp  succession_vertex.h  writer.cpp  writer.h
src/tests/: CMakeLists.txt
